fixed bleed on figure/figcaption

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -84,7 +84,7 @@ header p {
 	border-radius: 5px;
 	margin-top: 50px;
 	width: 100%;
-	height: 300px;
+	min-height: 300px;
 	img {
 		object-fit: cover;
 		border-radius: 5px;
