--- a/styles/styles.css
+++ b/styles/styles.css
@@ -507,7 +507,7 @@ header p {
   border-radius: 5px;
   margin-top: 50px;
   width: 100%;
-  height: 300px;
+  min-height: 300px;
 }
 
 .header-image-container img {
